syntax = "proto3";

package product;

option go_package = "/product";

service ProductCatalogService {
  rpc CreateProduct(CreateProductReq) returns (CreateProductResp) {}
  rpc UpdateProduct(UpdateProductReq) returns (UpdateProductResp) {}
  rpc DeleteProduct(DeleteProductReq) returns (DeleteProductResp) {}

  rpc ListProducts(ListProductsReq) returns (ListProductsResp) {}
  rpc GetProduct(GetProductReq) returns (GetProductResp) {}

  rpc SearchProducts(SearchProductsReq) returns (SearchProductsResp) {}
}

// 产品创建
message CreateProductReq {
  string name = 1;
  string description = 2;
  int64 stock = 3;
  float price = 4;
  int64 status = 5;
  string picture = 6;
  repeated string categories = 7;
}
message CreateProductResp {
  uint32 id = 1;
}
// 产品创建


// 产品修改
message UpdateProductReq {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  int64 stock = 4;
  float price = 5;
  string picture = 6;
  int64 status = 7;
  repeated string categories = 8;
}
message UpdateProductResp {
  bool success = 1;
}
// 产品修改

// 产品删除
message DeleteProductReq {
  uint32 id = 1;
}
message DeleteProductResp {
  bool success = 1;
}
// 产品删除

message ListProductsReq{
  int32 page = 1;
  int64 pageSize = 2;

  string categoryName = 3;
}

message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;

  repeated string categories = 6;
}

message ListProductsResp {
  repeated Product products = 1;
}

message GetProductReq {
  uint32 id = 1;
}

message GetProductResp {
  Product product = 1;
}

message SearchProductsReq {
  string query = 1;
}

message SearchProductsResp {
  repeated Product results = 1;
}